@@ -20,6 +20,7 @@
 using System;
 using System.Collections.Generic;
 using System.Linq;
+using System.Text;
 using System.Windows.Forms;
 using System.Xml.XPath;
 
@@ -32,56 +33,43 @@ namespace Chummer
         private bool _blnLoading = true;
         private string _strSelectedMetamagic = string.Empty;
 
-        private readonly string _strType = string.Empty;
-        private readonly string _strRootXPath = "/chummer/metamagics/metamagic";
+        private readonly string _strType;
+        private readonly string _strRootXPath;
 
         private readonly Character _objCharacter;
 
         private readonly XPathNavigator _objXmlDocument;
 
-        private readonly List<KeyValuePair<string, int>> _lstMetamagicLimits = new List<KeyValuePair<string, int>>();
-        private readonly Mode _objMode;
-
-        public enum Mode
-        {
-            Metamagic = 0,
-            Echo,
-        }
+        private readonly List<string> _lstMetamagicLimits = new List<string>();
 
         #region Control Events
 
-        public frmSelectMetamagic(Character objCharacter, Mode objMode)
+        public frmSelectMetamagic(Character objCharacter, InitiationGrade objGrade)
         {
+            _objCharacter = objCharacter ?? throw new ArgumentNullException(nameof(objCharacter));
+            if (objGrade == null)
+                throw new ArgumentNullException(nameof(objGrade));
             InitializeComponent();
             this.UpdateLightDarkMode();
             this.TranslateWinForm();
-            _objCharacter = objCharacter ?? throw new ArgumentNullException(nameof(objCharacter));
-            _objMode = objMode;
 
-            if (_objCharacter.Improvements.Any(imp =>
-                imp.ImproveType == Improvement.ImprovementType.MetamagicLimit))
+            foreach (Improvement imp in _objCharacter.Improvements.Where(imp => imp.ImproveType == Improvement.ImprovementType.MetamagicLimit && imp.Rating == objGrade.Grade && imp.Enabled))
             {
-                foreach (Improvement imp in _objCharacter.Improvements.Where(imp =>
-                    imp.ImproveType == Improvement.ImprovementType.MetamagicLimit && imp.Enabled))
-                {
-                    _lstMetamagicLimits.Add(new KeyValuePair<string, int>(imp.ImprovedName, imp.Rating));
-                }
+                _lstMetamagicLimits.Add(imp.ImprovedName);
             }
 
             // Load the Metamagic information.
-            switch (objMode)
+            if (objGrade.Technomancer)
             {
-                case Mode.Metamagic:
-                    _strRootXPath = "/chummer/metamagics/metamagic";
-                    _objXmlDocument = _objCharacter.LoadDataXPath("metamagic.xml");
-                    _strType = LanguageManager.GetString("String_Metamagic");
-                    break;
-
-                case Mode.Echo:
-                    _strRootXPath = "/chummer/echoes/echo";
-                    _objXmlDocument = _objCharacter.LoadDataXPath("echoes.xml");
-                    _strType = LanguageManager.GetString("String_Echo");
-                    break;
+                _strRootXPath = "/chummer/echoes/echo";
+                _objXmlDocument = _objCharacter.LoadDataXPath("echoes.xml");
+                _strType = LanguageManager.GetString("String_Echo");
+            }
+            else
+            {
+                _strRootXPath = "/chummer/metamagics/metamagic";
+                _objXmlDocument = _objCharacter.LoadDataXPath("metamagic.xml");
+                _strType = LanguageManager.GetString("String_Metamagic");
             }
         }
 
@@ -181,25 +169,30 @@ namespace Chummer
                         strFilter += "and adept = " + bool.TrueString.CleanXPath();
                 }
             }
+
+            if (_lstMetamagicLimits.Count > 0)
+            {
+                strFilter += " and (";
+                StringBuilder sbdFilter = new StringBuilder();
+                foreach (string strMetamagic in _lstMetamagicLimits)
+                    sbdFilter.Append("name = '" + strMetamagic + "' or ");
+                sbdFilter.Length -= 4;
+                strFilter += sbdFilter.ToString() + ')';
+            }
+
             if (!string.IsNullOrEmpty(txtSearch.Text))
                 strFilter += " and " + CommonFunctions.GenerateSearchXPath(txtSearch.Text);
             List<ListItem> lstMetamagics = new List<ListItem>();
             foreach (XPathNavigator objXmlMetamagic in _objXmlDocument.Select(_strRootXPath + '[' + strFilter + ']'))
             {
                 string strId = objXmlMetamagic.SelectSingleNode("id")?.Value;
-                if (!string.IsNullOrEmpty(strId))
+                if (string.IsNullOrEmpty(strId))
+                    continue;
+                if (!chkLimitList.Checked || objXmlMetamagic.CreateNavigator().RequirementsMet(_objCharacter))
                 {
-                    if (_lstMetamagicLimits.Count > 0 && (_objMode == Mode.Metamagic && !_lstMetamagicLimits.Any(item => item.Key == objXmlMetamagic.SelectSingleNode("name")?.Value && (item.Value == -1 || item.Value == _objCharacter.InitiateGrade)) ||
-                                                          _objMode == Mode.Echo && !_lstMetamagicLimits.Any(item => item.Key == objXmlMetamagic.SelectSingleNode("name")?.Value && (item.Value == -1 || item.Value == _objCharacter.SubmersionGrade))))
-                    {
-                        continue;
-                    }
-                    if (!chkLimitList.Checked || objXmlMetamagic.CreateNavigator().RequirementsMet(_objCharacter))
-                    {
-                        lstMetamagics.Add(new ListItem(strId,
-                            objXmlMetamagic.SelectSingleNode("translate")?.Value ?? objXmlMetamagic.SelectSingleNode("name")?.Value ??
-                            LanguageManager.GetString("String_Unknown")));
-                    }
+                    lstMetamagics.Add(new ListItem(strId,
+                        objXmlMetamagic.SelectSingleNode("translate")?.Value ?? objXmlMetamagic.SelectSingleNode("name")?.Value ??
+                        LanguageManager.GetString("String_Unknown")));
                 }
             }
             lstMetamagics.Sort(CompareListItems.CompareNames);
